--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   postgres:
     image: "postgres"
     restart: always
+    ports:
+        - 5432:5432
     environment:
         POSTGRES_PASSWORD: postgres
         POSTGRES_USER: postgres
