Added proper logging, added various optimizations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     build: .
     environment:
       DB_HOST: postgres
-      API_KEY: test_key
+      WOO_ARGS: (:port 80 :debug nil :address "0.0.0.0")
     ports:
       - 5000:80
     volumes:
