--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     build: .
     environment:
       DB_HOST: postgres
-      WOO_ARGS: (:port 80 :debug nil :address "0.0.0.0")
+      WOO_ARGS: (:port 80 :debug nil :address "0.0.0.0" :worker-num 4)
     ports:
       - 5000:80
     volumes:
